--- a/test/test.html
+++ b/test/test.html
@@ -15,7 +15,7 @@
 	  <div id="header">
 		<h1>JavaScript unit test file</h1>
 		<p>
-		  This file tests <strong>legendre.js</strong>.
+		  This file tests <strong>urm-evaluator.js</strong>.
 		</p>
 	  </div>
 
