Use URM, not Legendre, Javascript files; don't need jQuery UI

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <link href="/ext/global.css" rel="stylesheet" type="text/css">
     <link href="ext/style.css" rel="stylesheet" type="text/css">
     <script src="ext/jquery.js" type="text/javascript"></script>
-    <script src="ext/jquery-ui.js" type="text/javascript"></script>
-    <script src="ext/legendre.js" type="text/javascript"></script>
-    <script src="ext/display-legendre.js" type="text/javascript"></script>
+    <script src="ext/urm-evaluator.js" type="text/javascript"></script>
+    <script src="ext/display-urm-evaluator.js" type="text/javascript"></script>
   </head>
   <body>
     <h1 id="title">
