--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
       </div>
       <div id="program">
         <h2>Program</h2>
-        <textarea></textarea>
+        <textarea id="input-program"></textarea>
+        <div id="parsed-program"><pre></pre></div>
       </div>
     </form>
     <div id="output">
