Make register inputs use HTML5 number type; add byline

--- a/index.html
+++ b/index.html
@@ -59,5 +59,8 @@
       <h2>Output</h2>
       <div id="results"></div>
     </div>
+    <div id="byline">
+      <p>By <a href="http://sean.mcgivern.me.uk/">Sean McGivern</a></p>
+    </div>
   </body>
 </html>
