Added about page and README file

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1 id="title">
       <abbr title="Unlimited register machine">URM</abbr> evaluator
     </h1>
+    <p id="about-link">(<a href="about.html">about</a>)</p>
     <div id="instructions">
       <h2>
         Available
