--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>About the URM evaluator</title>
+    <link href="ext/app-icon.png" rel="apple-touch-icon">
     <link href="ext/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
