--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>URM (unlimited register machine) evaluator</title>
+    <link href="ext/app-icon.png" rel="apple-touch-icon">
     <link href="ext/style.css" rel="stylesheet" type="text/css">
     <script src="ext/jquery.js" type="text/javascript"></script>
     <script src="ext/urm-evaluator.js" type="text/javascript"></script>
