Added HTML5 manifest

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="urm-evaluator.appcache">
   <head>
     <title>URM (unlimited register machine) evaluator</title>
     <link href="ext/app-icon.png" rel="apple-touch-icon">
