--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="urm-evaluator.appcache">
   <head>
     <title>About the URM evaluator</title>
     <link href="ext/app-icon.png" rel="apple-touch-icon">
