--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="ext/display-urm-evaluator.js" type="text/javascript"></script>
   </head>
   <body>
+    <noscript>
+      This page requires JavaScript to be enabled in order to work.
+    </noscript>
     <h1 id="title">
       <abbr title="Unlimited register machine">URM</abbr> evaluator
     </h1>
